--- a/research_publication.html
+++ b/research_publication.html
@@ -71,7 +71,7 @@
               <!-- TODO: Replace href with the actual Journal Article URL -->
               <a
                 class="btn btn-ghost btn-lg"
-                href="#"
+                href="https://semarakilmu.my/index.php/sijap/article/view/306"
                 target="_blank"
                 rel="noopener"
               >
