update program header

--- a/programs.html
+++ b/programs.html
@@ -38,12 +38,10 @@
 
     <main id="main">
       <!-- Hero -->
-      <section class="hero programs-hero">
-        <div class="container hero-grid programs-hero-grid">
-          <div class="programs-hero-copy">
-            <h1 class="display" style="color: #fff">
-              Practical &amp; Programs
-            </h1>
+      <section class="hero">
+        <div class="container hero-grid">
+          <div>
+            <h1 class="display">Practical &amp; Programs</h1>
             <p class="subtitle">Where the 5Q MindVehicle™ comes alive</p>
             <p>
               The 5Q MindVehicle™ Framework exists because the future demands
