--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
       </section>
 
       <!-- Intro copy -->
-      <section class="intro">
+      <section class="intro" id="framework">
         <div class="container narrow intro-split">
           <figure class="intro-figure">
             <img
@@ -454,13 +454,9 @@
         <div class="container cta-inner">
           <h2>From insight to impact — across cultures and continents.</h2>
           <div>
-            <button
-              class="btn btn-primary btn-lg"
-              id="open-booking"
-              type="button"
-            >
+            <a href="/invited_speaking" class="btn btn-primary btn-lg">
               Invite Dr. Elaine
-            </button>
+            </a>
           </div>
         </div>
       </section>
