--- a/about_me.html
+++ b/about_me.html
@@ -499,11 +499,7 @@
             </p>
           </div>
           <div class="research-cta-action">
-            <button
-              id="open-booking-2"
-              class="btn btn-primary btn-lg"
-              type="button"
-            >
+             <a href="/connect" class="btn btn-primary btn-lg">
               Collaborate
             </button>
           </div>
