--- a/programs.html
+++ b/programs.html
@@ -50,12 +50,8 @@
               with 5Q.
             </p>
             <div class="cta-row">
-              <button
-                id="open-booking-3"
-                class="btn btn-primary btn-lg"
-                type="button"
-              >
-                Talk to us about programs – Let’ Connec
+               <a href="/connect" class="btn btn-primary btn-lg">
+                Talk to us about programs – Let’ Connect
               </button>
             </div>
           </div>
