--- a/about_me.html
+++ b/about_me.html
@@ -499,9 +499,7 @@
             </p>
           </div>
           <div class="research-cta-action">
-             <a href="/connect" class="btn btn-primary btn-lg">
-              Collaborate
-            </button>
+            <a href="/connect" class="btn btn-primary btn-lg"> Collaborate </a>
           </div>
         </div>
       </section>
