--- a/about_me.html
+++ b/about_me.html
@@ -197,11 +197,11 @@
             </p>
           </article>
           <article class="about-card">
-            <h3>Malaysia Psychotherapy Association (MAP)</h3>
+            <h3>Malaysia Psychotherapy Association (MPA)</h3>
             <p>
-              Certified board member and licensed psychotherapist. Advocates
-              “prevention is better than cure”, strengthening families with
-              early support to protect mental health before crises arise.
+              Certified Psychotherapist by Malaysian Psychotherapy Association:
+              GPL-PM 291 Board-Certified Family Therapist in conferred by MPA
+              Child Psychology and Family Therapy Board
             </p>
           </article>
           <article class="about-card">
