--- a/invited_speaking.html
+++ b/invited_speaking.html
@@ -78,13 +78,18 @@
         <h2 id="highlightsTitle" class="section-title">Global Highlights</h2>
         <div class="hl-grid">
           <article class="hl-card">
-            <figure class="hl-fig">
-              <img
-                src="assets/ph1.jpg"
-                alt="Speaking at Global Education Summit 2024 in India"
-                loading="lazy"
-              />
-            </figure>
+            <img
+              src="assets/images/india_association.jpg"
+              alt="Speaking at Global Education Summit 2024 in India"
+              loading="lazy"
+              style="
+                aspect-ratio: 16 / 9;
+                object-fit: cover;
+                width: 100%;
+                transition: transform 0.4s ease;
+              "
+            />
+
             <div class="hl-body">
               <h3>Global Education Summit 2024 — India</h3>
               <p class="muted">
@@ -101,13 +106,18 @@
           </article>
 
           <article class="hl-card">
-            <figure class="hl-fig">
-              <img
-                src="assets/ph2.jpg"
-                alt="International Symposium on Creative Education 2025 in Finland"
-                loading="lazy"
-              />
-            </figure>
+            <img
+              src="assets/images/finland.jpg"
+              alt="International Symposium on Creative Education 2025 in Finland"
+              loading="lazy"
+              style="
+                aspect-ratio: 16 / 9;
+                object-fit: cover;
+                width: 100%;
+                transition: transform 0.4s ease;
+              "
+            />
+
             <div class="hl-body">
               <h3>
                 International Symposium on Creative Education 2025 — Finland
@@ -125,13 +135,18 @@
           </article>
 
           <article class="hl-card">
-            <figure class="hl-fig">
-              <img
-                src="assets/ph3.jpg"
-                alt="World Council for Psychotherapy Conference 2025 in Austria"
-                loading="lazy"
-              />
-            </figure>
+            <img
+              src="assets/images/austria.jpeg"
+              alt="World Council for Psychotherapy Conference 2025 in Austria"
+              loading="lazy"
+              style="
+                aspect-ratio: 16 / 9;
+                object-fit: cover;
+                width: 100%;
+                transition: transform 0.4s ease;
+              "
+            />
+
             <div class="hl-body">
               <h3>World Council for Psychotherapy Conference 2025 — Austria</h3>
               <p class="muted">
