--- a/programs.html
+++ b/programs.html
@@ -51,7 +51,7 @@
             </p>
             <div class="cta-row">
               <a href="/connect" class="btn btn-primary btn-lg">
-                Talk to us about programs – Let’ Connect
+                Talk to us about programs – Let’s Connect
               </a>
             </div>
           </div>
@@ -60,7 +60,7 @@
             aria-label="Programs in action"
           >
             <img
-              src="assets/images/audience_speaking.jpg"
+              src="assets/images/graduation.jpg"
               alt="Workshops and speaking bringing 5Q to life"
             />
           </figure>
