--- a/invited_speaking.html
+++ b/invited_speaking.html
@@ -222,7 +222,11 @@
       </section>
 
       <!-- Full width image (Global Keynote Speaker) -->
-      <section class="container" aria-label="Global Keynote Speaker">
+      <section
+        class="container"
+        aria-label="Global Keynote Speaker"
+        style="margin-bottom: 30px"
+      >
         <figure class="media-wide banner-overlay">
           <img
             src="assets/images/sus_goal.png"
