--- a/programs.html
+++ b/programs.html
@@ -137,7 +137,7 @@
           </article>
           <figure class="media-wide media-tight">
             <img
-              src="assets/images/elainelooo.jpg"
+              src="assets/images/promizzion.jpeg"
               alt="Teens presenting projects and mentoring peers"
             />
             <figcaption class="cap">“Lead Beyond.”</figcaption>
@@ -158,7 +158,7 @@
         <div class="program-layout program-layout--flip">
           <figure class="media-wide media-tight">
             <img
-              src="assets/images/elainelooo.jpg"
+              src="assets/images/deemcee.jpeg"
               alt="DeEmcee founder addressing children and parents"
             />
             <figcaption class="cap">DeEmcee founder’s message.</figcaption>
@@ -282,7 +282,7 @@
         <div class="program-layout program-layout--flip">
           <figure class="media-wide media-tight">
             <img
-              src="assets/images/elainelooo.jpg"
+              src="assets/images/kidzutopia.png"
               alt="Children in playful learning environments with bright colors"
             />
             <figcaption class="cap">
@@ -420,7 +420,7 @@
           <div class="program-gallery">
             <figure class="media-wide media-tight">
               <img
-                src="assets/images/elainelooo.jpg"
+                src="assets/images/pf.png"
                 alt="Parents First program — workshop snapshot"
               />
               <figcaption class="cap">
