change yellow based

--- a/about_me.html
+++ b/about_me.html
@@ -129,7 +129,7 @@
         </p>
         <figure class="media-wide" aria-label="5Q MindVehicle illustration">
           <img
-            src="assets/images/5Q_Brain.png"
+            src="assets/images/5Q_Brain_yellow.jpg"
             alt="Dr. Elaine speaking on stage to a packed audience"
           />
           <figcaption class="cap">
