--- a/programs.html
+++ b/programs.html
@@ -415,7 +415,7 @@
           <div class="program-gallery">
             <figure class="media-wide media-tight">
               <img
-                src="assets/pf.png"
+                src="assets/pf_new.jpeg"
                 alt="Parents First program — workshop snapshot"
               />
             </figure>
