--- a/index.html
+++ b/index.html
@@ -178,7 +178,10 @@
                   />
                 </li>
                 <li>
-                  <img src="assets/images/logo-asean.png" alt="ASEAN Awards" />
+                  <img
+                    src="assets/images/logo_asean_new.png"
+                    alt="ASEAN Awards"
+                  />
                 </li>
 
                 <li>
