--- a/research_publication.html
+++ b/research_publication.html
@@ -94,7 +94,9 @@
         <div class="about-grid">
           <article class="about-card endorsement-card">
             <div class="endorsement-header">
-              <span class="badge">Collaborative Research Project</span>
+              <span class="badge"
+                >Collaborative Research aligned with UNESCO Chair</span
+              >
               <h3>Prof. Pekka Neittaanmäki</h3>
               <p class="endorsement-role">
                 UNESCO Chair on AI-Supported Digital Platforms in Education
