--- a/media.html
+++ b/media.html
@@ -122,79 +122,61 @@
             bridges between parents, educators, and policy leaders.
           </li>
         </ul>
-        <div class="embed-grid" style="margin-top: 1rem">
-          <iframe
-            class="fb-embed"
-            title="Community event 1"
-            src="https://www.facebook.com/plugins/post.php?href=https%3A%2F%2Fwww.facebook.com%2Fdrelaineloo%2Fposts%2Fpfbid02rns8EKQZic36cNQPmoNV4bePiMdFmH6n4RFHXUV2ADvbCHWtLZEPA7DqRZ6ieYC1l&amp;show_text=true&amp;width=500"
-            width="500"
-            height="711"
-            style="border: none; overflow: hidden"
-            scrolling="no"
-            frameborder="0"
-            allowfullscreen="true"
-            allow="autoplay; clipboard-write; encrypted-media; picture-in-picture; web-share"
-          ></iframe>
-          <iframe
-            class="fb-embed"
-            title="Community event 2"
-            src="https://www.facebook.com/plugins/post.php?href=https%3A%2F%2Fwww.facebook.com%2Fdrelaineloo%2Fposts%2Fpfbid028FbDLt5HqFxv6K8QmnB8dY3UQp7wCvUbXhk3HfNTSU58gxCNyveUomvso1yyzSR3l&amp;show_text=true&amp;width=500"
-            width="500"
-            height="711"
-            style="border: none; overflow: hidden"
-            scrolling="no"
-            frameborder="0"
-            allowfullscreen="true"
-            allow="autoplay; clipboard-write; encrypted-media; picture-in-picture; web-share"
-          ></iframe>
-          <iframe
-            class="fb-embed"
-            title="Community event 3"
-            src="https://www.facebook.com/plugins/post.php?href=https%3A%2F%2Fwww.facebook.com%2Fdrelaineloo%2Fposts%2Fpfbid0MPDtVWVhiMiQJNLHfQiEsb7dFQzgpMXic2dnyuS2aVkJXuLgPNH9m3Pb6D65L1Y7l&amp;show_text=true&amp;width=500"
-            width="500"
-            height="711"
-            style="border: none; overflow: hidden"
-            scrolling="no"
-            frameborder="0"
-            allowfullscreen="true"
-            allow="autoplay; clipboard-write; encrypted-media; picture-in-picture; web-share"
-          ></iframe>
-          <iframe
-            class="fb-embed"
-            title="Community event 4"
-            src="https://www.facebook.com/plugins/post.php?href=https%3A%2F%2Fwww.facebook.com%2Fdrelaineloo%2Fposts%2Fpfbid02vPg92HjrSUjR77iurEzeFgWoYbBGeMDErFs8YbfpmBbtopHQe5ibGLwnH1dZ5gZnl&amp;show_text=true&amp;width=500"
-            width="500"
-            height="711"
-            style="border: none; overflow: hidden"
-            scrolling="no"
-            frameborder="0"
-            allowfullscreen="true"
-            allow="autoplay; clipboard-write; encrypted-media; picture-in-picture; web-share"
-          ></iframe>
-          <iframe
-            class="fb-embed"
-            title="Community event 5"
-            src="https://www.facebook.com/plugins/post.php?href=https%3A%2F%2Fwww.facebook.com%2Fdrelaineloo%2Fposts%2Fpfbid02xPYiBKWjSR2kh5RRc255jU1quoSmRppDuchgwW349nYo4YqYwKNwTxkejZb9xhTUl&amp;show_text=true&amp;width=500"
-            width="500"
-            height="711"
-            style="border: none; overflow: hidden"
-            scrolling="no"
-            frameborder="0"
-            allowfullscreen="true"
-            allow="autoplay; clipboard-write; encrypted-media; picture-in-picture; web-share"
-          ></iframe>
-          <iframe
-            class="fb-embed"
-            title="Community event 6"
-            src="https://www.facebook.com/plugins/post.php?href=https%3A%2F%2Fwww.facebook.com%2Fdrelaineloo%2Fposts%2Fpfbid0VqMiX5kEEk3HtqCC1HEnXZW9k1rXZUbbRbB9VpcYu7PiuBfM7GwFQNCps6VG6Gpsl&amp;show_text=true&amp;width=500"
-            width="500"
-            height="711"
-            style="border: none; overflow: hidden"
-            scrolling="no"
-            frameborder="0"
-            allowfullscreen="true"
-            allow="autoplay; clipboard-write; encrypted-media; picture-in-picture; web-share"
-          ></iframe>
+        <div class="gallery-grid" style="margin-top: 1rem">
+          <a
+            class="gcard"
+            target="_blank"
+            rel="noopener"
+            href="https://www.facebook.com/drelaineloo/posts/pfbid02rns8EKQZic36cNQPmoNV4bePiMdFmH6n4RFHXUV2ADvbCHWtLZEPA7DqRZ6ieYC1l"
+            ><img
+              src="assets/images/association/asso_1.jpg"
+              alt="Community event 1"
+          /></a>
+          <a
+            class="gcard"
+            target="_blank"
+            rel="noopener"
+            href="https://www.facebook.com/drelaineloo/posts/pfbid028FbDLt5HqFxv6K8QmnB8dY3UQp7wCvUbXhk3HfNTSU58gxCNyveUomvso1yyzSR3l"
+            ><img
+              src="assets/images/association/asso_2.jpg"
+              alt="Community event 2"
+          /></a>
+          <a
+            class="gcard"
+            target="_blank"
+            rel="noopener"
+            href="https://www.facebook.com/drelaineloo/posts/pfbid0MPDtVWVhiMiQJNLHfQiEsb7dFQzgpMXic2dnyuS2aVkJXuLgPNH9m3Pb6D65L1Y7l"
+            ><img
+              src="assets/images/association/asso_3.jpg"
+              alt="Community event 3"
+          /></a>
+          <a
+            class="gcard"
+            target="_blank"
+            rel="noopener"
+            href="https://www.facebook.com/drelaineloo/posts/pfbid02vPg92HjrSUjR77iurEzeFgWoYbBGeMDErFs8YbfpmBbtopHQe5ibGLwnH1dZ5gZnl"
+            ><img
+              src="assets/images/association/asso_4.jpg"
+              alt="Community event 4"
+          /></a>
+          <a
+            class="gcard"
+            target="_blank"
+            rel="noopener"
+            href="https://www.facebook.com/drelaineloo/posts/pfbid02xPYiBKWjSR2kh5RRc255jU1quoSmRppDuchgwW349nYo4YqYwKNwTxkejZb9xhTUl"
+            ><img
+              src="assets/images/association/asso_5.jpg"
+              alt="Community event 5"
+          /></a>
+          <a
+            class="gcard"
+            target="_blank"
+            rel="noopener"
+            href="https://www.facebook.com/drelaineloo/posts/pfbid0VqMiX5kEEk3HtqCC1HEnXZW9k1rXZUbbRbB9VpcYu7PiuBfM7GwFQNCps6VG6Gpsl"
+            ><img
+              src="assets/images/association/asso_6.jpg"
+              alt="Community event 6"
+          /></a>
         </div>
         <p class="cap">
           “Connecting people from national platforms to local communities.”
