--- a/research_publication.html
+++ b/research_publication.html
@@ -85,6 +85,18 @@
               alt="Research, stage, and community impact"
             />
           </figure>
+          <figure class="hero-figure">
+            <img
+              src="assets/images/rp_1.jpg"
+              alt="Research, stage, and community impact"
+            />
+          </figure>
+          <figure class="hero-figure">
+            <img
+              src="assets/images/rp_2.jpg"
+              alt="Research, stage, and community impact"
+            />
+          </figure>
         </div>
       </section>
 
@@ -181,7 +193,7 @@
           <article class="pub-card">
             <figure class="pub-figure">
               <img
-                src="assets/images/publication_newspaper.jpg"
+                src="assets/images/publication_newspaper_new.jpeg"
                 alt="Thesis on exemplary teacher practices"
               />
             </figure>
