update image home page

--- a/index.html
+++ b/index.html
@@ -378,73 +378,73 @@
           <div class="gallery-grid" data-lightbox>
             <button type="button" class="gcard gallery-item">
               <img
-                src="assets/images/gallery/gallery_1.jpg"
+                src="assets/images/home/home_1.jpeg"
                 alt="Event moment 1"
                 loading="lazy"
-                data-full="assets/images/gallery/gallery_1.jpg"
+                data-full="assets/images/home/home_1.jpeg"
                 data-lightbox-group="home-gallery"
               />
             </button>
             <button type="button" class="gcard gallery-item">
               <img
-                src="assets/images/gallery/gallery_2.jpg"
+                src="assets/images/home/home_2.jpeg"
                 alt="Event moment 2"
                 loading="lazy"
-                data-full="assets/images/gallery/gallery_2.jpg"
+                data-full="assets/images/home/home_2.jpeg"
                 data-lightbox-group="home-gallery"
               />
             </button>
             <button type="button" class="gcard gallery-item">
               <img
-                src="assets/images/gallery/gallery_3.jpg"
+                src="assets/images/home/home_3.jpeg"
                 alt="Event moment 3"
                 loading="lazy"
-                data-full="assets/images/gallery/gallery_3.jpg"
+                data-full="assets/images/home/home_3.jpeg"
                 data-lightbox-group="home-gallery"
               />
             </button>
             <button type="button" class="gcard gallery-item">
               <img
-                src="assets/images/gallery/gallery_4.jpg"
+                src="assets/images/home/home_12.jpeg"
                 alt="Event moment 4"
                 loading="lazy"
-                data-full="assets/images/gallery/gallery_4.jpg"
+                data-full="assets/images/home/home_12.jpeg"
                 data-lightbox-group="home-gallery"
               />
             </button>
             <button type="button" class="gcard gallery-item">
               <img
-                src="assets/images/gallery/gallery_5.jpg"
+                src="assets/images/home/home_5.jpeg"
                 alt="Event moment 5"
                 loading="lazy"
-                data-full="assets/images/gallery/gallery_5.jpg"
+                data-full="assets/images/home/home_5.jpeg"
                 data-lightbox-group="home-gallery"
               />
             </button>
             <button type="button" class="gcard gallery-item">
               <img
-                src="assets/images/gallery/gallery_6.jpg"
+                src="assets/images/home/home_6.jpeg"
                 alt="Event moment 6"
                 loading="lazy"
-                data-full="assets/images/gallery/gallery_6.jpg"
+                data-full="assets/images/home/home_6.jpeg"
                 data-lightbox-group="home-gallery"
               />
             </button>
             <button type="button" class="gcard gallery-item">
               <img
-                src="assets/images/gallery/gallery_7.jpg"
+                src="assets/images/home/home_9.jpeg"
                 alt="Event moment 7"
                 loading="lazy"
-                data-full="assets/images/gallery/gallery_7.jpg"
+                data-full="assets/images/home/home_9.jpeg"
                 data-lightbox-group="home-gallery"
               />
             </button>
             <button type="button" class="gcard gallery-item">
               <img
-                src="assets/images/gallery/gallery_8.jpg"
+                src="assets/images/home/home_11.jpeg"
                 alt="Event moment 8"
                 loading="lazy"
-                data-full="assets/images/gallery/gallery_8.jpg"
+                data-full="assets/images/home/home_11.jpeg"
                 data-lightbox-group="home-gallery"
               />
             </button>
