--- a/connect.html
+++ b/connect.html
@@ -153,12 +153,19 @@
             <h3 class="section-title">Follow &amp; Engage</h3>
             <ul class="social-list">
               <li>
-                <strong>Facebook</strong> – Impact stories &amp; live updates
+                <a href="https://www.facebook.com/drelaineloo" target="_blank" rel="noopener">
+                  <strong>Facebook</strong> – Impact stories &amp; live updates
+                </a>
               </li>
-              <li><strong>Instagram</strong> – Behind-the-scenes and events</li>
               <li>
-                <strong>LinkedIn</strong> – Research, thought leadership &amp;
-                professional collaborations
+                <a href="https://www.instagram.com/dr.elaineloo" target="_blank" rel="noopener">
+                  <strong>Instagram</strong> – Behind-the-scenes and events
+                </a>
+              </li>
+              <li>
+                <a href="https://www.linkedin.com/in/elaine-loo-274136131" target="_blank" rel="noopener">
+                  <strong>LinkedIn</strong> – Research, thought leadership &amp; professional collaborations
+                </a>
               </li>
             </ul>
           </div>
