--- a/index.html
+++ b/index.html
@@ -396,28 +396,28 @@
             </button>
             <button type="button" class="gcard gallery-item">
               <img
-                src="assets/images/home/home_3.jpeg"
+                src="assets/images/graf1.jpg"
                 alt="Event moment 3"
                 loading="lazy"
-                data-full="assets/images/home/home_3.jpeg"
+                data-full="assets/images/graf1.jpg"
                 data-lightbox-group="home-gallery"
               />
             </button>
             <button type="button" class="gcard gallery-item">
               <img
-                src="assets/images/home/home_12.jpeg"
+                src="assets/images/graf2.jpg"
                 alt="Event moment 4"
                 loading="lazy"
-                data-full="assets/images/home/home_12.jpeg"
+                data-full="assets/images/graf2.jpg"
                 data-lightbox-group="home-gallery"
               />
             </button>
             <button type="button" class="gcard gallery-item">
               <img
-                src="assets/images/home/home_5.jpeg"
+                src="assets/images/graf3.jpg"
                 alt="Event moment 5"
                 loading="lazy"
-                data-full="assets/images/home/home_5.jpeg"
+                data-full="assets/images/graf3.jpg"
                 data-lightbox-group="home-gallery"
               />
             </button>
