update add iamge

--- a/about_me.html
+++ b/about_me.html
@@ -76,7 +76,7 @@
               target="_blank"
               rel="noopener"
               ><img
-                src="assets/images/elaine_about.jpg"
+                src="assets/images/home/home_3.jpeg"
                 alt="Cross-cultural moment"
             /></a>
             <a
