--- a/invited_speaking.html
+++ b/invited_speaking.html
@@ -62,7 +62,7 @@
           </div>
           <figure class="hero-figure">
             <img
-              src="assets/images/audience_speaking.jpg"
+              src="assets/images/invi_speaking.jpeg"
               alt="Dr. Elaine speaking on a wide stage with audience leaning in"
             />
             <figcaption class="subtitle" style="margin-top: 0.5rem">
