--- a/connect.html
+++ b/connect.html
@@ -60,7 +60,7 @@
 
           <figure class="hero-figure">
             <img
-              src="assets/images/elaine_talk.jpg"
+              src="assets/images/home/home_6.jpeg"
               alt="Dr Elaine speaking on stage"
             />
           </figure>
