--- a/media.html
+++ b/media.html
@@ -58,7 +58,7 @@
           </div>
           <figure class="hero-figure" aria-label="On stage and in media">
             <img
-              src="assets/images/audience_speaking.jpg"
+              src="assets/images/home/home_11.jpeg"
               alt="Dr. Elaine speaking on stage to a packed audience"
             />
           </figure>
