--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
           </article>
           <article class="stat">
             <img src="assets/ic-globe.svg" alt="" aria-hidden="true" />
-            <h3>international speaker</h3>
+            <h3>International speaker</h3>
             <p>India • Finland • Austria</p>
           </article>
           <article class="stat">
