--- a/research_publication.html
+++ b/research_publication.html
@@ -177,7 +177,7 @@
           <article class="pub-card">
             <a
               class="pub-link"
-              href="https://semarakilmu.my/index.php/sijap/article/view/306"
+              href="https://www.parentsfirst2u.com/prison-series/"
               target="_blank"
               rel="noopener"
               aria-label="Open journal article in new tab"
@@ -201,7 +201,7 @@
           <article class="pub-card">
             <a
               class="pub-link"
-              href="assets/images/publication_newspaper_new.jpeg"
+              href="https://semarakilmu.my/index.php/sijap/article/view/306"
               target="_blank"
               rel="noopener"
               aria-label="Open publication image in new tab"
